<resources>
    <string name="app_name">NinesolPractise</string>
    <string name="starting_time">25:00</string>
    <string name="stopping_time">00:00</string>
    <string name="settings">Settings</string>
    <string name="new_task">New Task</string>
    <string name="start">Start</string>
    <string name="break_">Break</string>
    <string name="stop">Stop</string>
    <string name="work_duration_minutes">Work Duration (minutes):</string>
    <string name="break_duration_minutes">Break Duration (minutes):</string>
    <string name="save">Save</string>
</resources>