<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/workDurationLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="12dp"
        android:text="@string/work_duration_minutes"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/workDurationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:hint="25:00"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/gray" />

    <TextView
        android:id="@+id/breakDurationLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:text="@string/break_duration_minutes"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/breakDurationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:hint="5:00"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/gray" />

    <Button
        android:id="@+id/saveSettingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/red"
        android:text="@string/save" />


</LinearLayout>